v6.2
(xx/02/18)

Changes / Improvements / Optimizations:
Native PC UEFI | Image now includes options to install to either EMMC (eg: onboard) or SDA (1st HDD) device: https://github.com/Fourdee/DietPi/issues/1171#issuecomment-336522021 | http://dietpi.com/phpbb/viewtopic.php?f=9&t=2809&p=10808#p10808
DietPi-Backup | Rsync: Error control now handled by G_RUN_CMD
DietPi-Config | Display options > Resolution: Added fkms/kms (OpenGL) modes for RPi 2/3.
DietPi-Config | Sparky SBC: Added option to select usb-dac-1.1 soundcard, which will enable USB1.1 compatibility.
DietPi-Config | WiFi: Now supports connecting to hidden WiFi networks, thanks @shahwahed : https://github.com/Fourdee/DietPi/pull/1497
DietPi-Software | Pydio: Add PHP module 'intl' on installation, as requested via web ui warning: https://github.com/Fourdee/DietPi/issues/1240
DietPi-LetsEncrypt | On Jessie, changed certificate auto renewal to native certbot renew command, to prevent certificate duplication: https://github.com/Fourdee/DietPi/issues/734
DietPi-LetsEncrypt | On Stretch, added automated Minio certificate renewal. Rerun "dietpi-letsencrypt" on your Stretch system to gain this feature.
DietPi-Software | Nginx: To further reduce recource usage, by default 'nginx-light' will be installed now: https://github.com/Fourdee/DietPi/issues/1240
DietPi-Software | PHP: Removed some unused PHP modules from default installation: https://github.com/Fourdee/DietPi/issues/1240
DietPi-Software | Added information regarding DietPi controlling services (stopping them), prior to install/uninstall. Thanks @gpioneer90: https://github.com/Fourdee/DietPi/issues/1484#issuecomment-363802523
DietPi-Software | PiJuice: Available for installation: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=10740#p10740 | https://github.com/Fourdee/DietPi/issues/1488
DietPi-Software | Grasshopper: Removed, no longer available for installation: https://github.com/Fourdee/DietPi/issues/1491