@@ -2275,14 +2275,32 @@
 
 			REBOOT_REQUIRED=1
 
-			dpkg-reconfigure locales
+			G_FILE_EXISTS /usr/share/i18n/SUPPORTED
 
-			if (( ! $(grep -ci -m1 '^en_GB.UTF-8' /etc/locale.gen) )); then
+			cat /usr/share/i18n/SUPPORTED | sed 's/#//g' | awk '{print $1}' | grep 'UTF-8' > /tmp/available_locale
+			local whiptail_menu_array=()
+			local index=0
+			#	convert for whiptail 0-1=1st option 2-3=2nd
+			while read line
+			do
 
-				export G_WHIP_MSG_TEXT='ERROR (locale):\n\nDietPi was unable to detect the presence of en_GB.UTF-8. This MUST be installed for DietPi scripts to function.\n\nPlease re-select the locales option and enable en_GB.UTF-8 on the 1st page.\nAfterwards, you can select any desired default locale, that you require.\n\nIMPORTANT:\nIf you fail to have at least en_GB.UTF-8 installed, DietPi will not function, you will experience issues. We can NOT support systems, that do not have en_GB.UTF-8 installed.'
-				G_WHIP_MSG
+				whiptail_menu_array[$index]="$line"
+				((index++))
+				whiptail_menu_array[$index]=''
+				((index++))
+
+			done < /tmp/available_locale
+			rm /tmp/available_locale
+
+			OPTION=$(whiptail --title "Locale" --menu "Please select a system locale. DietPi will automatically apply this as the default locale.:" --default-item "$(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//')" --cancel-button "$TEXT_MENU_BACK" 18 70 10 "${whiptail_menu_array[@]}" 3>&1 1>&2 2>&3)
+			CHOICE=$?
+			if (( $CHOICE == 0 )); then
+
+				/DietPi/dietpi/func/dietpi-set_software locale "$OPTION"
 
 			fi
+
+			unset whiptail_menu_array
 
 			#Return to this menu
 			TARGETMENUID=7
