@@ -67,9 +67,32 @@ $FP_SCRIPT			verify_dietpi.txt		verifies dietpi.txt entries, adds missing entrie
 
 			cat << _EOF_ > /etc/locale.gen
 $INPUT_MODE_VALUE UTF-8
+_EOF_
+
+			# - Add en_GB.UTF-8 back in, if its not the default
+			if [ "$INPUT_MODE_VALUE" != "en_GB.UTF-8" ]; then
+
+				cat << _EOF_ >> /etc/locale.gen
 en_GB.UTF-8 UTF-8
 _EOF_
+			fi
+
+			# - Remove exisiting settings that will break dpkg-reconfigure
+			rm /etc/environment &> /dev/null
+			rm /etc/default/locale &> /dev/null
+
 			G_RUN_CMD dpkg-reconfigure -f noninteractive locales
+
+			# - Update /etc/default/locales with new values (not effective until next load of bash session, eg: logout/in)
+			update-locale LANG="$INPUT_MODE_VALUE"
+			update-locale LANGUAGE="$INPUT_MODE_VALUE"
+			update-locale LC_CTYPE="$INPUT_MODE_VALUE"
+			update-locale LC_TIME="$INPUT_MODE_VALUE"
+			update-locale LC_ALL="$INPUT_MODE_VALUE"
+
+			# - Failsafe, reset script to en_GB
+			export LANG=en_GB.UTF8
+			export LC_ALL=en_GB.UTF8
 
 			sed -i "/AUTO_SETUP_LOCALE=/c\AUTO_SETUP_LOCALE=$INPUT_MODE_VALUE" /DietPi/dietpi.txt
 
