@@ -126,10 +126,13 @@
 		#-------------------------------------------------------------------------------
 		#locale rework/reset: https://github.com/Fourdee/DietPi/issues/1430#issuecomment-364763302
 		rm /etc/profile.d/99-dietpi-force-locale.sh &> /dev/null
-		rm /etc/environment &> /dev/null
-		rm /etc/default/locale &> /dev/null
 
-		/DietPi/dietpi/func/dietpi-set_software locale "$(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//')"
+		/DietPi/dietpi/func/dietpi-set_software locale $(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//')
+
+		#DEBUG:
+		# /DietPi/dietpi/func/dietpi-set_software locale de_DE.UTF-8
+		# /DietPi/dietpi/func/dietpi-set_software locale en_GB.UTF-8
+		#DEBUG:
 
 		export G_WHIP_MSG_TEXT="Notice (locale):\n\nTo resolve broken Locales, they have been reset to $(grep -m1 '^AUTO_SETUP_LOCALE=' /DietPi/dietpi.txt | sed 's/.*=//').\n\nIf you had a different locale configured on this system, please use dietpi-config at a later date to re-configure."
 		G_WHIP_MSG
