@@ -4,6 +4,7 @@ v6.2
 Changes / Improvements / Optimizations:
 Native PC UEFI | Image now includes options to install to either EMMC (eg: onboard) or SDA (1st HDD) device: https://github.com/Fourdee/DietPi/issues/1171#issuecomment-336522021 | http://dietpi.com/phpbb/viewtopic.php?f=9&t=2809&p=10808#p10808
 DietPi-Backup | Rsync: Error control now handled by G_RUN_CMD
+DietPi-Config | Locale: Reworked, now only lists UTF-8 items, no longer using dpkg-reconfigure. Our custom set_software script handles all locales ensuring en_GB is always installed, and selected item is applied as system default.
 DietPi-Config | Display options > Resolution: Added fkms/kms (OpenGL) modes for RPi 2/3.
 DietPi-Config | Sparky SBC: Added option to select usb-dac-1.1 soundcard, which will enable USB1.1 compatibility.
 DietPi-Config | WiFi: Now supports connecting to hidden WiFi networks, thanks @shahwahed : https://github.com/Fourdee/DietPi/pull/1497
